--- a/_files/my.cnf
+++ b/_files/my.cnf
@@ -29,6 +29,8 @@ binlog_format=mixed
 server-id	= 1
 default-time-zone = '+8:00'
 
+secure_file_priv=
+
 [mysqldump]
 quick
 max_allowed_packet = 16M
