--- a/_files/my.cnf
+++ b/_files/my.cnf
@@ -29,7 +29,7 @@ binlog_format=mixed
 server-id	= 1
 default-time-zone = '+8:00'
 
-secure_file_priv=
+secure_file_priv = /tmp/
 
 [mysqldump]
 quick
